Fixed issue where cards dissappeared behind lanes after dragging.

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -15,10 +15,10 @@ body {
   cursor: grab;
 }
 
-.card .over-due {
+.over-due {
   background-color: red;
 }
 
-.card .almost-due { 
+.almost-due { 
   background-color: yellow;
 }
